# estrutura-poetry

./: README.md
estrutura-poetry/: pyproject.toml
estrutura-poetry/tests/: test_estrutura_poetry.py
projeto-python/: pyproject.toml
projeto-python/projeto_python/: cli.py
projeto-python/tests/: test_projeto_python.py
