[tool.poetry]
name = "projeto-python"
version = "0.1.0"
description = ""
authors = ["medeiros-erika <ems.erikamedeiros@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.1"
httpx = "^0.22.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.18.1"

[tool.poetry.scripts]
meu-script = 'projeto_python.cli:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
